--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -540,6 +540,15 @@ body {
 }
 
 @media only screen and (max-width: 739px) {
+  #app {
+    margin: 0;
+    margin-top: 10px;
+  }
+
+  body {
+    overflow: hidden;
+  }
+
   .project-section-boxes.Grid-View .project-box-wrapper {
     width: 100%;
   }
@@ -574,6 +583,15 @@ body {
   }
 }
 @media only screen and (min-width: 740px) and (max-width: 1023px) {
+  #app {
+    margin: 0;
+    margin-top: 10px;
+  }
+
+  body {
+    overflow: hidden;
+  }
+
   .messages-section {
     transition: all 0.2s linear;
     position: absolute;
